--- a/src/main/resources/templates/api/apiTemplate.html
+++ b/src/main/resources/templates/api/apiTemplate.html
@@ -21,7 +21,7 @@
             }}
             <tr class="">
                 <td><b>{{v.key}}</b></td>
-                <td><span class="env-header" header-key="{{v.key}}">{{v.value}}</span></td>
+                <td><span class="env-header show-{{v.key}}" header-key="{{v.key}}">{{v.value}}</span></td>
             </tr>
             {{#     })
                 }
