--- a/src/main/resources/templates/env/envAddTemplate.html
+++ b/src/main/resources/templates/env/envAddTemplate.html
@@ -1,4 +1,5 @@
 <form id="envForm" class="layui-form" action="">
+    <input type="hidden" name="id" value="">
     <div class="layui-form-item">
         <label class="layui-form-label">名称</label>
         <div class="layui-input-block">
