--- a/src/main/resources/templates/api/apiTemplate.html
+++ b/src/main/resources/templates/api/apiTemplate.html
@@ -16,16 +16,13 @@
             <tr>
                 <td colspan="2"><b>Header</b></td>
             </tr>
-            {{# if(currProjectData.env.headerMap !=null){
-                    $.each(currProjectData.env.headerMap,(i,v)=>{
-            }}
+            {{# $.each((currProjectData.env.headerMap|| []) ,(i,v)=>{ }}
             <tr class="">
                 <td><b>{{v.key}}</b></td>
                 <td><span class="env-header show-{{v.key}}" header-key="{{v.key}}">{{v.value}}</span></td>
             </tr>
-            {{#     })
-                }
-            }}
+            {{# }) }}
+
         </table>
         <div class="layui-tab layui-tab-brief" lay-filter="tab-out-param">
             <ul class="layui-tab-title">
@@ -39,29 +36,21 @@
                         <th width="10%">类型</th>
                         <th>描述</th>
                         </thead>
-                        {{# let op = d.api.apiParamList.find(i=>i.type==2);
-                        if(op != null){
-                        }}
                         <tr>
+                            {{# let op = d.api.apiParamList.find(i=>i.type==2); }}
+                            {{# if(op != null){ }}
                             <td>{{op.paramName}}</td>
                             <td>{{op.paramDescribe||''}}</td>
-                        </tr>
-                        {{# } else{ }}
-                        <tr>
+                            {{# } else{ }}
                             <td colspan="3">无</td>
+                            {{# } }}
                         </tr>
-                        {{# } }}
                     </table>
-                    {{# let jsonStr = "";
-                        d.typeList.filter(i=>i.type == 2).forEach(v=>{
-                        let classDesc = v.className+ (v.classDescribe? '：'+v.classDescribe :'');
-                        if(v.typeJson){
-                            jsonStr = v.typeJson;
-                        }
-                    }}
+                    {{# d.typeList.filter(i=>i.type == 2 && i.classFieldList).forEach(v=>{ }}
                     <table class="layui-table" lay-size="sm">
                         <thead>
                         <tr>
+                            {{# let classDesc = v.className+ (v.classDescribe!=null ? '：'+v.classDescribe : '');}}
                             <th colspan="3">{{classDesc}}</th>
                         </tr>
                         <tr>
@@ -80,8 +69,9 @@
                     </table>
                     {{# }) }}
                 </div>
+                {{# let typeJsonObj =(d.typeList.find(i=>i.type == 2&& i.typeJson )||{}); }}
                 <div class="layui-tab-item">
-                    <textarea class="json-text" >{{formatJson1(jsonStr)}}</textarea>
+                    <textarea class="json-text">{{formatJson1(typeJsonObj.typeJson)}}</textarea>
                 </div>
             </div>
         </div>
@@ -94,14 +84,12 @@
             <th width="10%">类型</th>
             <th>描述</th>
             </thead>
-            {{# let reqParam = d.api.apiParamList.filter(i=>i.type==1);
-                reqParam.forEach(v=>{
-            }}
+            {{# let reqParam = d.api.apiParamList.filter(i=>i.type==1); }}
+            {{# reqParam.forEach(v=>{ }}
             <tr>
                 <td>{{v.paramName}}</td>
-                {{# let inputType = BaseType[v.dataType]; }}
-
                 <td>
+                    {{# let inputType = BaseType[v.dataType]; }}
                     {{# if(inputType){ }}
                     <input class="layui-input input-sm param-value"
                            api-paramMode="{{v.paramMode}}" api-type="{{inputType}}"
@@ -115,54 +103,55 @@
                 <td>{{v.dataType}}</td>
                 <td>{{v.paramDescribe||''}}</td>
             </tr>
-            {{# });
-            if(reqParam.length ==0){ }}
+            {{# }); }}
+            {{# if(reqParam.length ==0){ }}
             <tr>
                 <td colspan="4">无</td>
             </tr>
-            {{# }else{ }}
-            {{# d.typeList.filter(i=>i.type == 1).forEach(v=>{ }}
-            <table class="layui-table" lay-size="sm">
-                <thead>
-                <tr>
-                    <th colspan="4">{{v.className+ (v.classDescribe? '：'+v.classDescribe :'')}}</th>
-                </tr>
-                <tr>
-                    <th width="10%">参数</th>
-                    <th width="10%">值</th>
-                    <th width="10%">类型</th>
-                    <th>描述</th>
-                </tr>
-                </thead>
-                {{# $.each(v.classFieldList,(i,f)=>{ }}
-                <tr>
-                    <td>{{f.paramName}}</td>
-                    <td>
-                        {{# if(v.paramMode != ParamMode.json){ }}
-                        <input class="layui-input input-sm param-value" api-paramMode="{{v.paramMode}}"
-                              name="{{f.paramName}}" type="{{BaseType[f.type]}}"/>
-                        {{# } }}
-                    </td>
-                    <td>{{f.type}}</td>
-                    <td>{{f.paramDescribe}}</td>
-                </tr>
-                {{# }) }}
-            </table>
-            {{# if(v.paramMode == ParamMode.json){ }}
-            <table class="layui-table" lay-size="sm">
-                <thead>
-                <tr>
-                    <th>JSON参数</th>
-                </tr>
-                </thead>
-                <tr>
-                    <td><textarea class="json-text req-json" >{{formatJson1(v.typeJson)}}</textarea></td>
-                </tr>
-            </table>
-            {{# } }}
-            {{# }) }}
             {{# } }}
         </table>
+
+        {{# d.typeList.filter(i=>i.type == 1 && i.classFieldList).forEach(v=>{ }}
+        <table class="layui-table" lay-size="sm">
+            <thead>
+            <tr>
+                <th colspan="4">{{v.className+ (v.classDescribe? '：'+v.classDescribe :'')}}</th>
+            </tr>
+            <tr>
+                <th width="10%">参数</th>
+                <th width="10%">值</th>
+                <th width="10%">类型</th>
+                <th>描述</th>
+            </tr>
+            </thead>
+            {{# $.each(v.classFieldList,(i,f)=>{ }}
+            <tr>
+                <td>{{f.paramName}}</td>
+                <td>
+                    {{# if(v.paramMode != ParamMode.json){ }}
+                    <input class="layui-input input-sm param-value" api-paramMode="{{v.paramMode}}"
+                           name="{{f.paramName}}" type="{{BaseType[f.type]}}"/>
+                    {{# } }}
+                </td>
+                <td>{{f.type}}</td>
+                <td>{{f.paramDescribe}}</td>
+            </tr>
+            {{# }) }}
+        </table>
+        {{# }) }}
+        {{# typeJsonObj = d.typeList.find(i=>i.type == 1&& i.paramMode == ParamMode.json ); }}
+        {{# if(typeJsonObj){ }}
+        <table class="layui-table" lay-size="sm">
+            <thead>
+            <tr>
+                <th>JSON参数</th>
+            </tr>
+            </thead>
+            <tr>
+                <td><textarea class="json-text req-json">{{formatJson1(typeJsonObj.typeJson)}}</textarea></td>
+            </tr>
+        </table>
+        {{# } }}
         <hr>
         <button class="layui-btn" lay-filter="apiFormBtn" onclick="commitApi({{d.id}})">提交</button>
         <div class="api-response layui-hide">
@@ -176,7 +165,7 @@
                 </tr>
                 <tr>
                     <td width="10%"><b>返回参数</b></td>
-                    <td><textarea class="json-text response-show" ></textarea></td>
+                    <td><textarea class="json-text response-show"></textarea></td>
                 </tr>
             </table>
         </div>
