--- a/src/main/resources/templates/api/apiTemplate.html
+++ b/src/main/resources/templates/api/apiTemplate.html
@@ -139,7 +139,7 @@
             {{# }) }}
         </table>
         {{# }) }}
-        {{# typeJsonObj = d.typeList.find(i=>i.type == 1&& i.paramMode == ParamMode.json ); }}
+        {{# typeJsonObj = d.typeList.find(i=>i.type == 1&& i.paramMode == ParamMode.json && i.typeJson); }}
         {{# if(typeJsonObj){ }}
         <table class="layui-table" lay-size="sm">
             <thead>
