--- a/src/main/resources/templates/menu/menuTemplate.html
+++ b/src/main/resources/templates/menu/menuTemplate.html
@@ -39,8 +39,9 @@
             <div class="layui-side-scroll" id="admin-navbar-side" lay-filter="side">
                 <ul class="layui-nav layui-nav-tree  beg-navbar">
                     {{# $.each(menu.childrenMenu,(i,menu)=>{ }}
-                    <li class="layui-nav-item layui-nav-itemed">
-                        <a href="javascript:void(0);" data-class="{{menu.className}}" data-name="{{menu.menuName}}">
+                    <li class="layui-nav-item ">
+                        <a href="javascript:void(0);" title="{{menu.menuName+' '+menu.className}}"
+                           data-class="{{menu.className}}" data-name="{{menu.menuName}}">
                             <i class="fa fa-cogs" aria-hidden="true" data-icon="fa-cogs"></i>
                             <cite> {{menu.menuName }}</cite>
                             <br>
@@ -48,14 +49,14 @@
                         </a>
                         <dl class="layui-nav-child">
                             {{# $.each(menu.childrenMenu,(j,cm)=>{ }}
-                            <dd title="{{cm.menuName}}">
-                                <a href="javascript:openTab({{cm.id}});" >
+                            <dd title="{{cm.menuName}}"  class="api-menu-{{cm.id}}">
+                                <a href="javascript:openTab({{cm.id}});">
                                     <i class="fa fa-navicon" data-icon="fa-navicon"></i>
                                     <cite class="">{{cm.menuName}}</cite>
                                     {{# if(cm.api != null){ }}
                                     <br/>
                                     <small class="api-type">{{ApiType[cm.api.type]}}</small>
-                                    <cite class="key_font">{{cm.api.path}}</cite>
+                                    <cite class="key_font" title="{{cm.api.path}}">{{cm.api.path}}</cite>
                                     <api class="layui-hide" data-menuname="{{cm.menuName}}" data-name="{{cm.api.name}}"
                                          data-method="{{cm.api.method}}" data-path="{{cm.api.path}}"></api>
                                     {{# } }}
