--- a/src/main/resources/templates/project/projectAddTemplate.html
+++ b/src/main/resources/templates/project/projectAddTemplate.html
@@ -21,6 +21,18 @@
         </div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">上下文路径</label>
+        <div class="layui-input-block">
+            <input type="text" name="contextPath" value="" autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">端口</label>
+        <div class="layui-input-block">
+            <input type="number" name="port" value="" autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit lay-filter="projectFormBtn">保存</button>
         </div>
