--- a/src/main/resources/templates/common/common.html
+++ b/src/main/resources/templates/common/common.html
@@ -11,6 +11,7 @@
     layui.extend({
         steps: '{/}'+context+'layui/lay/steps/steps'
     });
+    let stepsS = layui.steps;
     let serverName =[[${#httpServletRequest.getServerName()}]];
     let serverPort =[[${#httpServletRequest.getServerPort()}]];
 </script>
