--- a/src/main/resources/templates/env/envAddTemplate.html
+++ b/src/main/resources/templates/env/envAddTemplate.html
@@ -23,6 +23,18 @@
         <div class="layui-form-mid layui-word-aux">多个逗号隔开</div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">使用项目端口</label>
+        <div class="layui-input-inline">
+            <input type="checkbox" name="isPort" lay-skin="switch" >
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">使用项目路径</label>
+        <div class="layui-input-inline">
+            <input type="checkbox" name="isContextPath" lay-skin="switch" >
+        </div>
+    </div>
+    <div class="layui-form-item">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit lay-filter="envFormBtn">保存</button>
         </div>
