--- a/src/main/resources/templates/manage.html
+++ b/src/main/resources/templates/manage.html
@@ -10,18 +10,6 @@
     <link rel="stylesheet" type="text/css"
           th:href="@{/layui/css/layui.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}">
-    <style type="text/css">
-        okToolbar {
-            display: block;
-            margin-top: 10px;
-            margin-bottom: 10px;
-            padding: 5px;
-            line-height: 22px;
-            border-radius: 0 2px 2px 0;
-            background-color: #f2f2f2;
-        }
-
-    </style>
 </head>
 <body>
 
@@ -66,14 +54,14 @@
                 <div class="layui-tab-content">
                     <div class="layui-tab-item layui-show" tab-id="1-1">
                         <!--工具栏-->
-                        <okToolbar>
+                        <div class="toolbar">
                             <button class="layui-btn layui-btn-normal layui-btn-sm" onclick="addProjectBtn()">
                                 添加
                             </button>
-                            <!--                            <button class="layui-btn layui-btn-normal layui-btn-sm" onclick="">-->
-                            <!--                                停用-->
-                            <!--                            </button>-->
-                        </okToolbar>
+                            <button class="layui-btn layui-btn-sm" onclick="dataTable.reload({});">
+                                <i class="layui-icon layui-icon-refresh"></i>
+                            </button>
+                        </div>
                         <!--数据表格-->
                         <table class="" id="project-table" lay-filter="project-table-filter"></table>
                     </div>
@@ -81,14 +69,14 @@
                         <div th:include="git/gitTemplate.html"></div>
                     </div>
                     <div class="layui-tab-item " tab-id="2-2">
-                        <okToolbar>
+                        <div class="toolbar">
                             <button class="layui-btn layui-btn-normal layui-btn-sm" onclick="openEnvForm()">
                                 添加
                             </button>
-                            <!--                            <button class="layui-btn layui-btn-normal layui-btn-sm" onclick="">-->
-                            <!--                                停用-->
-                            <!--                            </button>-->
-                        </okToolbar>
+                            <button class="layui-btn layui-btn-sm" onclick="dataTableEnv.reload({});">
+                                <i class="layui-icon layui-icon-refresh"></i>
+                            </button>
+                        </div>
                         <!--数据表格-->
                         <table class="" id="env-table" lay-filter="env-table-filter"></table>
                     </div>
