--- a/src/main/resources/templates/project/projectAddTemplate.html
+++ b/src/main/resources/templates/project/projectAddTemplate.html
@@ -1,4 +1,5 @@
 <form id="projectForm" class="layui-form" action="">
+    <input type="hidden" name="id">
     <div class="layui-form-item">
         <label class="layui-form-label">项目名</label>
         <div class="layui-input-block">
