--- a/src/main/resources/templates/steps/steps.html
+++ b/src/main/resources/templates/steps/steps.html
@@ -75,7 +75,7 @@
         saveGit(function () {
             stepsFun.getNext(0);
         });
-        addProject(function () {
+        saveProject(function () {
             stepsFun.getNext(0);
         });
         saveEnv(function () {
