--- a/src/main/resources/templates/common/common.html
+++ b/src/main/resources/templates/common/common.html
@@ -1,5 +1,6 @@
 
 <script th:src="@{/layui/layui.all.js}"></script>
+<script th:src="@{/layui/nprogress/nprogress.js}"></script>
 <script th:inline="javascript">
     let $ = layui.$;
     let tree = layui.tree;
