--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -9,6 +9,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" type="text/css"
           th:href="@{/layui/css/layui.css}">
+    <link rel="stylesheet" th:href="@{/layui/nprogress/nprogress.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}">
 </head>
 <body>
@@ -57,6 +58,7 @@
 <script th:src="@{/js/project/project.js}"></script>
 <script th:src="@{/js/env/env.js}"></script>
 <script th:src="@{/js/api/api.js}"></script>
+
 <script type="text/javascript">
     let projectData;
     let envData;
