--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -6,16 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" type="text/css"
-          th:href="@{/layui/css/layui.css}">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <link rel="stylesheet" type="text/css" th:href="@{/layui/css/layui.css}">
     <link rel="stylesheet" th:href="@{/layui/nprogress/nprogress.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}">
 </head>
 <body>
 <div class="layui-layout-body">
     <div class="layui-layout layui-layout-admin">
-        <div class="layui-header header " >
+        <div class="layui-header header ">
             <div id="header-body">
             </div>
             <ul class="layui-nav layui-layout-right">
@@ -40,7 +39,7 @@
                 </ul>
                 <div class="layui-tab-content">
                     <div class="layui-tab-item layui-show">
-<div th:include="doc.html"></div>
+                        <div th:include="doc.html"></div>
                     </div>
                 </div>
             </div>
@@ -79,7 +78,7 @@
                 let $menu = $('.api-menu-' + currMenuId);
                 $menu.addClass("layui-this").parents(".layui-nav-item").addClass("layui-nav-itemed");
                 $menu.parents('.layui-side-scroll').animate({
-                    scrollTop: $menu.offset().top-200
+                    scrollTop: $menu.offset().top - 200
                 }, 0);
                 openTab(currMenuId);
             }
